Add Amazon link

--- a/index.html
+++ b/index.html
@@ -15,4 +15,5 @@ layout: default
       <a href="{{ site.baseurl }}{{ post.url }}" class="read-more">Read More</a>
     </article>
   {% endfor %}
+<iframe src="https://rcm-eu.amazon-adsystem.com/e/cm?o=2&p=26&l=ur1&category=gift_certificates&banner=0ZS2J1W4F5KNEBHAKWR2&f=ifr&linkID=a42d8533cf6714f00b6cd57efda4eb9c&t=leeroyim-21&tracking_id=leeroyim-21" width="468" height="60" scrolling="no" border="0" marginwidth="0" style="border:none;" frameborder="0"></iframe>
 </div>
